# imagegen-rs

./: Cargo.toml
bitmap/: Cargo.toml
bitmap/src/: aliasing.rs  lib.rs  mutability.rs
getopt/: Cargo.toml
getopt/src/: lib.rs
imagegen/: Cargo.toml  build.rs  process.ods  wrapper.h
imagegen/src/: color.rs  generate.rs  geometry.rs  main.rs  pnmdata.rs  progress.rs  setup.rs
imagegen/src/progress/: file.rs  framebuffer.rs  sdl.rs  text.rs
imagegen/src/progress/framebuffer/: raw.rs
